--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,57 @@ body {
   font-size: 1.6rem;
 }
 
-.App {
-  min-height: 100vh;
+.container {
+  max-width: 140rem;
+  margin: 0 auto;
+  padding: 0 3rem;
+  margin-top: 10rem;
+}
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/*  */
+.user-grid {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  padding: 2rem;
+}
+
+.grid-header,
+.grid-row {
+  display: flex;
+  padding: 1rem;
+  border-bottom: 1px solid #ccc;
+}
+
+.grid-header {
+  font-weight: bold;
+  font-weight: bold;
+  background-color: #f0f0f0;
+  color: #333;
+}
+
+.grid-row:last-child {
+  border-bottom: none;
+}
+
+.add-user-button {
+  background-color: #3498db;
+  color: #ffffff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.add-user-button:focus {
+  background-color: #79b9e4;
+  outline: none;
 }
 
 /* Re useable class */
@@ -48,35 +97,7 @@ body {
 .flex-1 {
   flex: 1;
 }
-.gap-1 {
-  gap: 1px;
-}
-.gap-2 {
-  gap: 2px;
-}
-.gap-3 {
-  gap: 3px;
-}
-.gap-4 {
-  gap: 4px;
-}
-.gap-5 {
-  gap: 5px;
-}
-.gap-10 {
-  gap: 10px;
-}
-.gap-15 {
-  gap: 15px;
-}
 
-.gap-20 {
-  gap: 20px;
-}
-
-.gap-25 {
-  gap: 25px;
-}
 .border-1 {
   border: 1px solid black;
 }
@@ -88,6 +109,18 @@ body {
 }
 .border-right {
   border-right: 1px solid gray !important;
+}
+.mb-2 {
+  margin-bottom: 2rem;
+}
+.mb-5 {
+  margin-bottom: 5rem;
+}
+.transformX-1 {
+  transform: translateX(1rem);
+}
+.text-center {
+  text-align: center;
 }
 .tab-components {
   /* padding: 20px; */
@@ -104,8 +137,9 @@ body {
 .btn {
   background: transparent;
   border: none;
-  padding: 20px 260px;
+  padding: 20px;
   font-size: 16px;
+  width: 100%;
 }
 .btn-active {
   border-bottom: 1px solid blue;
@@ -115,43 +149,33 @@ button {
   font-family: "Roboto", sans-serif;
 }
 
-/*  */
-.user-grid {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #ccc;
-  padding: 2rem;
+/* spinner */
+
+.loading-spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db; /* Change to your preferred color */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
 }
 
-.grid-header,
-.grid-row {
-  display: flex;
-  padding: 1rem;
-  border-bottom: 1px solid #ccc;
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-.grid-header {
-  font-weight: bold;
-  font-weight: bold;
-  background-color: #f0f0f0;
-  color: #333;
-}
-
-.grid-row:last-child {
-  border-bottom: none;
-}
-
-.add-user-button {
-  background-color: #3498db; /* Slightly deeper background color */
-  color: #ffffff;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
+.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 11;
+  height: 100vh;
+  width: 100%;
   cursor: pointer;
-  transition: background-color 0.2s, color 0.2s;
-}
-
-.add-user-button:focus {
-  background-color: #e0e0e0; /* Slightly darker background for focus */
-  outline: none; /* Remove default focus outline */
+  background-color: rgba(0, 0, 0, 0.6);
 }
