--- a/src/index.css
+++ b/src/index.css
@@ -27,165 +27,171 @@ body {
 }
 
 /*  */
-.user-grid {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #ccc;
-  padding: 2rem;
-}
-
-.grid-header,
-.grid-row {
-  display: flex;
-  padding: 1rem;
-  border-bottom: 1px solid #ccc;
-}
-
-.grid-header {
-  font-weight: bold;
-  font-weight: bold;
-  background-color: #f0f0f0;
-  color: #333;
-}
-
-.grid-row:last-child {
-  border-bottom: none;
-}
-
-.add-user-button {
-  background-color: #3498db;
-  color: #ffffff;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.2s, color 0.2s;
-}
-
-.add-user-button:focus {
-  background-color: #79b9e4;
-  outline: none;
-}
-
-.tab-buttons {
-  border-bottom: 1px solid gray;
-}
-.tab-content {
-  padding: 25px;
-}
-.btn {
-  background: transparent;
-  border: none;
-  padding: 20px;
-  font-size: 16px;
-  width: 100%;
-}
-.btn-active {
-  border-bottom: 1px solid blue;
-  color: blue;
+.heading-secondary {
+  font-size: 32px;
+  color: #343;
+  margin-bottom: 4rem;
 }
 button {
   font-family: "Roboto", sans-serif;
 }
 
-/* spinner */
+/* common  */
 
-.loading-spinner {
-  width: 40px;
-  height: 40px;
-  border: 4px solid #f3f3f3;
-  border-top: 4px solid #3498db; /* Change to your preferred color */
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.backdrop-bg {
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.create-user-modal {
-  background-color: white;
-  transform: translate(-50%, -50%);
-  padding: 3rem 4rem;
-  border-radius: 10px;
-}
-.form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  width: 350px;
-}
-.form-label {
-  font-weight: bold;
-  display: block;
-  margin-bottom: 5px;
-}
-
-.form-input {
+/* Re useable class */
+/* height ,width */
+.w-full {
   width: 100%;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  transition: border-color 0.3s ease;
 }
-
-.form-input:focus {
-  border-color: #3498db;
-  outline: none;
+.w-70 {
+  width: 70%;
 }
-.error {
-  font-size: 14px;
-  color: red;
-  margin-top: 2px;
+.w-fit {
+  width: fit-content;
 }
-.submit-button {
-  background-color: #3498db;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  padding: 10px 15px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+.h-524 {
+  height: 524px;
 }
-
-.submit-button:hover {
-  background-color: #2581c7;
+.h-screen {
+  height: 100vh;
 }
-
-/*  */
-.pagination-btn-box button {
-  border: none;
-  background: transparent;
-  color: #2581c7;
-  cursor: pointer;
-  font-size: 1.5rem;
+/* font */
+.font-semibold {
+  font-weight: 500;
 }
-
-/* Navbar.css */
-.navbar {
+.text-2 {
+  font-size: 2rem;
+}
+/* flex box */
+.flex {
   display: flex;
-  justify-content: space-between;
+}
+.items-center {
   align-items: center;
-  background-color: #333;
-  padding: 1rem;
+}
+.items-start {
+  align-items: start;
+}
+.items-end {
+  align-items: end;
+}
+.justify-start {
+  justify-content: start;
+}
+.justify-center {
+  justify-content: center;
+}
+.justify-between {
+  justify-content: space-between;
+}
+.justify-end {
+  justify-content: end;
+}
+.flex-1 {
+  flex: 1;
+}
+.gap-2 {
+  gap: 2rem;
+}
+.gap-4 {
+  gap: 2rem;
+}
+.border-1 {
+  border: 1px solid black;
+}
+.radius-5 {
+  border-radius: 5px;
+}
+.rounded-full {
+  border-radius: 100%;
+}
+.shadow-base {
+  box-shadow: 2px -1px 15px 1px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 2px -1px 15px 1px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 2px -1px 15px 1px rgba(0, 0, 0, 0.2);
+}
+.cursor-pointer {
+  cursor: pointer;
+}
+.not-allowed {
+  cursor: not-allowed !important;
+  opacity: 0.5;
+}
+.border-right {
+  border-right: 1px solid gray !important;
+}
+.list-none {
+  list-style: none;
+}
+.ml-1 {
+  margin-left: 1rem;
+}
+.mb-1 {
+  margin-bottom: 1rem;
+}
+.mb-2 {
+  margin-bottom: 2rem;
+}
+.mb-5 {
+  margin-bottom: 5rem;
+}
+.mt-2 {
+  margin-top: 2rem;
+}
+.mr-1 {
+  margin-right: 1rem;
+}
+.p-2 {
+  padding: 2rem;
+}
+.pb-2 {
+  padding-bottom: 2rem;
+}
+.pr-2 {
+  padding-right: 2rem;
+}
+.transformX-1 {
+  transform: translateX(1rem);
+}
+.text-center {
+  text-align: center;
+}
+/* positioning */
+.fixed {
+  position: fixed;
+}
+.relative {
+  position: relative;
+}
+.absolute {
+  position: absolute;
+}
+.top-0 {
+  top: 0;
+}
+.top-3 {
+  top: 3%;
+}
+.top-50 {
+  top: 50%;
+}
+.left-0 {
+  left: 0;
+}
+.left-50 {
+  left: 50%;
+}
+.right-3 {
+  right: 3%;
+}
+.bottom-4 {
+  bottom: 4%;
 }
 
-.nav-item {
-  color: white;
-  text-decoration: none;
-  margin: 0 1rem;
-  font-weight: bold;
+/* z-indexing */
+.z-1 {
+  z-index: 1;
 }
-
-.nav-item:hover {
-  color: #ff9900;
+.z-2 {
+  z-index: 2;
 }
